--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,50 +1,32 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-light" style="background-color: {{ site.featured-color }}!important">
-  <a href="{{ site.baseurl }}/"><img class="brand-image" src="{{ site.baseurl }}/images/header.png" width="250px"></a>
+  <a href="{{ site.baseurl }}/"><img class="brand-image" src="{{ site.baseurl }}/images/header.png" width="200px"></a>
   <!--<a class="navbar-brand" href="#">Navbar</a>-->
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarNavDropdown">
     <ul class="navbar-nav navbar-center">
-      <li class="nav-item">
-        <a class="nav-link" href="{{ site.baseurl }}/">Dachaigh</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="{{ site.baseurl }}/roinn-seorsa/eadar-lion">An t-Eadar-lìon</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="{{ site.baseurl }}/roinn-seorsa/applaidean">Applaidean</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="{{ site.baseurl }}/roinn-seorsa/apple">Apple</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="{{ site.baseurl }}/roinn-seorsa/gaidhlig">Gàidhlig</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="{{ site.baseurl }}/roinn-seorsa/google">Google</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="{{ site.baseurl }}/roinn-seorsa/lcdtq">LCDTQ</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="{{ site.baseurl }}/roinn-seorsa/microsoft">Microsoft</a>
-      </li>
-      <li class="nav-item">
-        <a class="dropdown-item" href="{{ site.baseurl }}/roinn-seorsa/blog">Blog</a>
-      </li>
-      <li class="nav-item">
-        <a class="dropdown-item" href="{{ site.baseurl }}/mar-deidhinn">Mar Deidhinn</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="{{ site.baseurl }}/lorg">Lorg</a>
-      </li>
+    {% for entry in site.data.navbar %}
+      {% assign sublinks = entry.sublinks %}
+      {% if sublinks %}
       <li class="nav-item dropdown">
-        <a class="nav-link" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-      <i class="fas fa-cog"></i>
-      </a>
+          <a class="nav-link" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">{{ entry.title }}</a>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+              {% for sublink in sublinks %}
+              <a class="dropdown-item" href="{{ site.baseurl }}{{ sublink.url }}">{{ sublink.title }}</a>
+              {% endfor %}
+          </div>
+      </li>
+      {% else %}
+      <li class="nav-item"><a class="nav-link" href="{{ site.baseurl }}{{ entry.url }}">{{ entry.title }}</a></li>
+      {% endif %}
+  {% endfor %}
+      <li class="nav-item dropdown">
+        <a class="nav-link" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" title="Roghainnean | Settings">
+            <i class="fas fa-cog"></i>
+        </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-        <a class="dropdown-item" id="theme-toggle" onclick="modeSwitcher()" href="#"></a>
+          <a class="dropdown-item" id="theme-toggle" onclick="modeSwitcher()" href="#"></a>
         </div>
       </li>
     </ul>
